# crypto-trading

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: log4rs.yaml
src/: config.rs  main.rs
src/repositories/: kraken.rs  kraken_ws.rs  mod.rs
src/types/: kraken.rs  mod.rs  trades.rs
src/types/dataframe/: cell.rs  column.rs  mod.rs  row.rs
src/types/kraken/: mod.rs
src/types/kraken/ticker/: mod.rs
src/types/kraken/tradeable_pairs/: mod.rs
src/types/kraken_ws/: mod.rs  response.rs
