[package]
name = "crypto-trading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.132", features = [ "derive" ] }
reqwest = { version = "0.11.8", features = [ "json" ] }
lazy_static =  "1.4.0"
strum = "0.23.0"
strum_macros = "0.23.1"
log = "0.4.14"
log4rs = "1.0.0"
tokio = { version = "1.15.0", features = [ "full" ] }
