[package]
name = "crypto-trading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.132", features = [ "derive" ] }
serde_json = "1.0.74"
reqwest = { version = "0.11.8", features = [ "json" ] }
lazy_static =  "1.4.0"
strum = { version = "0.23.0", features = [ "derive" ]}
strum_macros = "0.23.1"
log = "0.4.14"
log4rs = "1.0.0"
tokio = { version = "1.15.0", features = [ "full" ] }
tokio-tungstenite = { version = "0.16.1", features=["native-tls"] }
futures-util = "0.3.19"
